--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,26 @@
 # Hiperparámetros del mejor modelo (ejemplo con Random Forest)
 random_forest:
   n_trees: 100            # Número de árboles
-  max_depth: 10           # Máxima profundidad de los árboles
-  min_samples_split: 2    # Mínimo de muestras para partir un nodo
+  # max_depth: 10           # Máxima profundidad de los árboles
+  # min_samples_split: 2    # Mínimo de muestras para partir un nodo
   random_seed: 42         # Semilla para reproducibilidad
+  bootstrap: True
+  ccp_alpha: 0.0
+  criterion: squared_error
+  max_depth: 10
+  max_features: 1.0
+  max_leaf_nodes: None
+  max_samples: None
+  min_impurity_decrease: 0.0
+  min_samples_leaf: 1
+  min_samples_split: 2
+  min_weight_fraction_leaf: 0.0
+  monotonic_cst: None
+  n_estimators: 100
+  n_jobs: None
+  oob_score: False 
+  random_state: 42
+  verbose: 0
+  warm_start: False
+  class_weight: balanced
   
